--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,10 @@ add_executable(tower
     src/aircraft_types.hpp
     src/aircraft.cpp
     src/aircraft.hpp
+    src/aircraft_manager.cpp
+    src/aircraft_manager.hpp
+    src/aircraft_factory.hpp
+    src/aircraft_factory.cpp
     src/airport_type.hpp
 	src/airport.hpp
 	src/config.hpp
